--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'org.parceler:parceler:0.2.13'
     compile 'com.hannesdorfmann.smoothprogressbar:library:1.0.0'
     compile 'com.squareup.picasso:picasso:2.3.2'
+    compile 'com.pnikosis:materialish-progress:1.4'
 }
