--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'com.pnikosis:materialish-progress:1.4'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
+    compile 'com.google.android.gms:play-services-maps:6.5.87'
 }
