--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.pnikosis:materialish-progress:1.4'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
     compile 'com.google.android.gms:play-services-maps:6.5.87'
+    compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 }
