--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,5 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
     compile 'com.google.android.gms:play-services-maps:6.5.87'
     compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
-    compile 'com.github.ksoichiro:android-observablescrollview:1.5.0'
+    compile 'com.yalantis:contextmenu:1.0.1'
 }
