--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,10 +21,10 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="project.se.main.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/title_main" >
         </activity>
         <activity
-            android:name="project.se.main.SplashScreen"
+            android:name="project.se.ui.SplashScreen"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -98,6 +98,14 @@
         <activity
             android:name="project.se.ui.MainFragment"
             android:label="@string/title_activity_main_fragment" >
+        </activity>
+        <activity
+            android:name="project.se.game.videogame.VideoGame"
+            android:label="@string/title_activity_video_game" >
+        </activity>
+        <activity
+            android:name="project.se.game.wordgame.WordGame"
+            android:label="@string/title_activity_word_game" >
         </activity>
     </application>
 
