--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
         transitive = true
     }
     compile 'com.koushikdutta.ion:ion:2.0.7'
+    compile 'com.mani:thindownloadmanager:1.0.0'
 }
