--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -99,6 +99,14 @@
             android:name="project.se.ui.MainFragment"
             android:label="@string/title_activity_main_fragment" >
         </activity>
+        <activity
+            android:name="project.se.lib.ion.LibIonDemo"
+            android:label="@string/title_activity_information" >
+        </activity>
+        <activity
+            android:name="project.se.lib.ion.ThinDownloadManager.ThinDownloadManagerDemo"
+            android:label="@string/title_activity_thin_download_manager_demo" >
+        </activity>
     </application>
 
 </manifest>
