--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     compile 'com.yalantis:contextmenu:1.0.1'
     compile 'com.github.ksoichiro:android-observablescrollview:1.5.0'
+    compile 'com.afollestad:material-dialogs:0.6.3.1'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile('com.mikepenz.aboutlibraries:library:4.5.5@aar') {
         transitive = true
