--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,13 +30,14 @@ dependencies {
     compile 'org.parceler:parceler:0.2.13'
     compile 'com.hannesdorfmann.smoothprogressbar:library:1.0.0'
     compile 'com.squareup.picasso:picasso:2.3.2'
-    compile 'com.pnikosis:materialish-progress:1.4'
     compile 'com.google.android.gms:play-services-maps:6.5.87'
     compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     compile 'com.yalantis:contextmenu:1.0.1'
     compile 'com.github.ksoichiro:android-observablescrollview:1.5.0'
     compile 'com.afollestad:material-dialogs:0.6.3.1'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+    compile 'com.github.amlcurran.showcaseview:library:5.0.0'
+    compile 'cn.pedant.sweetalert:library:1.3'
     compile('com.mikepenz.aboutlibraries:library:4.5.5@aar') {
         transitive = true
     }
