--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,12 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile('com.mikepenz.aboutlibraries:library:4.5.5@aar') {
+        transitive = true
+    }
+    compile('de.keyboardsurfer.android.widget:crouton:1.8.5@aar') {
+        exclude group: 'com.google.android', module: 'support-v4'
+    }
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.github.eluleci:flatui:3.0.0'
     compile 'com.github.navasmdc:MaterialDesign:1.+@aar'
@@ -37,11 +43,6 @@ dependencies {
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile 'com.github.amlcurran.showcaseview:library:5.0.0'
     compile 'cn.pedant.sweetalert:library:1.3'
-    compile('com.mikepenz.aboutlibraries:library:4.5.5@aar') {
-        transitive = true
-    }
     compile 'com.mani:thindownloadmanager:1.0.0'
-    compile('de.keyboardsurfer.android.widget:crouton:1.8.5@aar') {
-        exclude group: 'com.google.android', module: 'support-v4'
-    }
+    compile 'com.android.support:support-v4:21.0.3'
 }
