--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile('com.mikepenz.aboutlibraries:library:4.5.5@aar') {
         transitive = true
     }
@@ -45,4 +45,5 @@ dependencies {
     compile 'cn.pedant.sweetalert:library:1.3'
     compile 'com.mani:thindownloadmanager:1.0.0'
     compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
 }
