--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     compile 'com.mani:thindownloadmanager:1.0.0'
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
+    compile 'com.github.orangegangsters:swipy:1.2.0@aar'
 }
