--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,5 @@ dependencies {
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.github.orangegangsters:swipy:1.2.0@aar'
-
+    compile 'info.hoang8f:android-segmented:1.0.4'
 }
