--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,6 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <meta-data android:name="AA_DB_NAME" android:value="talktodeaf.db" />
-        <meta-data android:name="AA_DB_VERSION" android:value="1" />
         <activity
             android:name="project.se.main.MainActivity"
             android:label="พูดผ่านภาษามือ"
@@ -95,7 +93,7 @@
         <activity
             android:name="project.se.information.book.BookInfo"
             android:label="@string/title_activity_book_info"
-            android:theme="@style/BookTheme" >
+            android:theme="@style/Theme.AppCompat.NoActionBar" >
         </activity>
         <activity
             android:name="project.se.information.book.BookDetail"
@@ -106,7 +104,7 @@
         <activity
             android:name="project.se.information.place.PlaceInfo"
             android:label="@string/title_activity_place_info"
-            android:theme="@style/PlaceTheme" >
+            android:theme="@style/Theme.AppCompat.NoActionBar" >
         </activity>
         <activity
             android:name="project.se.information.place.PlaceDetail"
@@ -123,19 +121,28 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name="project.se.download.CategoryDownload"
-            android:label="@string/title_activity_download" >
+            android:name="project.se.download.ActionDownload.ActionCategoryDownload"
+            android:label="@string/title_activity_actiondownload" >
         </activity>
         <activity
-            android:name="project.se.download.VocabularyDownload"
-            android:label="@string/title_activity_download" >
-            <meta-data
-                android:name="AA_MODELS"
-                android:value="project.se.database.model.SqlDownload" />
+            android:name="project.se.download.ActionDownload.ActionVocabularyDownload"
+            android:label="@string/title_activity_actiondownload" >
         </activity>
         <activity
             android:name="project.se.main.Setting"
             android:label="@string/title_activity_setting" >
+        </activity>
+        <activity
+            android:name="project.se.download.Download"
+            android:label="@string/title_activity_download" >
+        </activity>
+        <activity
+            android:name="project.se.download.SpeakDownload.SpeakCategoryDownload"
+            android:label="@string/title_activity_speakdownload" >
+        </activity>
+        <activity
+            android:name="project.se.download.SpeakDownload.SpeakVocabularyDownload"
+            android:label="@string/title_activity_speakdownload" >
         </activity>
     </application>
 
