--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile('com.mikepenz.aboutlibraries:library:4.5.5@aar') {
         transitive = true
     }
@@ -48,4 +48,5 @@ dependencies {
     compile 'info.hoang8f:android-segmented:1.0.4'
     compile 'com.github.nirhart:parallaxscroll:1.0'
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'ch.acra:acra:4.6.1'
 }
